--- a/temp-html.html
+++ b/temp-html.html
@@ -37,7 +37,7 @@
     <div class="content">  
       <h1 >تحويل درجة الحرارة </h1> 
       <p id="about">
-        درجة الحرارة هي مقياس مدى سخونة جسم ما أو برودته, وهي مؤشر على كمية الطاقة الحرارية التي يختزنها الجسم, كما أنها مؤشر على مدى حركية ذراته التي تسببت بنشوء هذه الحرارة. وهناك العديد من الوحدات المستخدمة لقياس درجة الحرارة مثل الكلفن والسيلزيوس. لمعرفة المزيد يمكن الاطلاع على أداة التحويل بين وحدات قياس الحرارة ادناه :
+        درجة الحرارة هي مقياس مدى سخونة جسم ما أو برودته، وهي مؤشر على كمية الطاقة الحرارية التي يختزنها الجسم، كما أنها مؤشر على مدى حركية ذراته التي تسببت بنشوء هذه الحرارة. وهناك العديد من الوحدات المستخدمة لقياس درجة الحرارة مثل الكلفن والسيلزيوس. لمعرفة المزيد يمكن الإطلاع على أداة التحويل بين وحدات قياس الحرارة أدناه :
       </p>
      
       <input type="number" id="inputValue" placeholder="ادخل القيمة هنا" oninput="convert()"> 
