amount-html.html

--- a/amount-html.html
+++ b/amount-html.html
@@ -39,7 +39,7 @@
     <div class="content">
       <h1 >تحويل كمية المادة </h1> 
       <p id="about">
-        المول هو وحدة قياس كمية المادة في الكيمياء. وهي من وحدات القياس الأساسية وتعد واحدة من وحدات القياس القليلة المستخدمة لقياس كمية فيزيائية. وقد أتى المصطلح “مول” من اللغة الألمانية , حيث كان فيلهلم أوستفالد أول من أطلق هذا الاسم في عام 1893, مع أن وحدة “الوزن المكافئ ” كانت تُستخدم منذ قرن من الزمان. لمعرفة المزيد حول مضاعفات وأجزاء المول يمكن الاطلاع على أداة التحويل بين وحدات قياس المادة ادناه :
+        المول هو وحدة قياس كمية المادة في الكيمياء. وهي من وحدات القياس الأساسية وتعد واحدة من وحدات القياس القليلة المستخدمة لقياس كمية فيزيائية. وقد أتى المصطلح "مول" من اللغة الألمانية ، حيث كان فيلهلم أوستفالد أول من أطلق هذا الاسم في عام 1893، مع أن وحدة "لوزن المكافئ " كانت تُستخدم منذ قرن من الزمان. لمعرفة المزيد حول مضاعفات وأجزاء المول يمكن الإطلاع على أداة التحويل بين وحدات قياس المادة أدناه :
       </p>
      
       <input type="number" id="inputValue" placeholder="ادخل القيمة هنا" oninput="convert()"> 
