amber-html.html

--- a/amber-html.html
+++ b/amber-html.html
@@ -37,7 +37,7 @@
     <div class="content">
       <h1 >تحويل شدة التيار  </h1> 
       <p id="about">
-        الأمبير هو وحدة قياس شدة التيار الكهربائي وهو أحد وحدات القياس الأساسية السبعة في النظام الدولي للوحدات. يرمز للأمبير بالعربية بالحرف ( أ ), وقد اختير الاسم تخليدًا لذكرى العالم الفرنسي أندري أمبير الذي درس التيار الكهربائي, والأمبير هو شدة التيار الناتج عن مرور شحنة كهربائية قدرها 1 كولوم في زمن قدره 1 ثانية. لمعرفة المزيد يمكنك الإطلاع على أداة التحويل بين وحدات التيار أدناه :
+        الأمبير هو وحدة قياس شدة التيار الكهربائي وهو أحد وحدات القياس الأساسية السبعة في النظام الدولي للوحدات. يرمز للأمبير بالعربية بالحرف ( أ )، وقد اختير الاسم تخليدًا لذكرى العالم الفرنسي أندري أمبير الذي درس التيار الكهربائي، والأمبير هو شدة التيار الناتج عن مرور شحنة كهربائية قدرها 1 كولوم في زمن قدره 1 ثانية.لمعرفة المزيد يمكنك الإطلاع على أداة التحويل بين وحدات التيار أدناه :
       </p>
 
       <input type="number" id="inputValue" placeholder="ادخل القيمة هنا" oninput="convert()"> 
