length-html.html

--- a/length-html.html
+++ b/length-html.html
@@ -37,7 +37,7 @@
     <div class="content">
       <h1 >تحويل الطول </h1> 
       <p id="about">
-        وحدة قياس الطول أو المسافة في النظام الدولي هي المتر ومضاعفاته أو أجزائه. وهو وحدة دولية لقياس المسافة، ويعرف على أنه المسافة التي يقطعها الضوء في الفراغ التام في 1/299,792,458 جزء من الثانية، وجاء اللفظ من الكلمة الإنجليزية، ويعتبر المتر وحدة قياس الطول الأكثر استعمالا في العالم. لمعرفة المزيد حول مضاعفات وأجزاء المتر يمكن الإطلاع على أداة التحويل بين وحدات قياس الطول أدناه :
+        وحدة قياس الطول أو المسافة في النظام الدولي هي المتر ومضاعفاته أو أجزائه. وهو وحدة دولية لقياس المسافة، ويعرف على أنه المسافة التي يقطعها الضوء في الفراغ التام في 1/299,792,458 جزء من الثانية، وجاء اللفظ من الكلمة الإنجليزية، ويعتبر المتر وحدة قياس الطول الأكثر استعمالًا في العالم. لمعرفة المزيد حول مضاعفات وأجزاء المتر يمكن الإطلاع على أداة التحويل بين وحدات قياس الطول أدناه :
       </p>
      
       <input type="number" id="inputValue" placeholder="ادخل القيمة هنا" oninput="convert()"> 
