--- a/SI-html.html
+++ b/SI-html.html
@@ -50,7 +50,7 @@
 
     <h4>النظام الدولي للوحدات </h4> 
 
-    <p id="about">
+    <p class="about">
       النظام العالمي للوحدات أو نظام الوحدات الدولي، ھو نظام وحدات القیاس الأوسع انتشارًا في العالم. ویستخدم النظام الدولي للوحدات في كل بلدان العالم باستثناء الولایات المتحدة الأمریكیة. وقد اشتق ھذا النظام من نظام  متر - كیلوجرام - ثانیة  للقیاس  وذلك بإضافة بعض الوحدات. والنظام الدولي للوحدات ھو نظام بدیل عن نظام سنتیمتر - جرام - ثانیة  القدیم. ویُسمى ھذا النظام اسم "النظام المتري"، خاصة في الولایات المتحدة الأمریكیة التي لم تتبناه بشكل واسع وبریطانیا التي لا تزال في مرحلة التحول إلى النظام المتري. كما أنه لیست جمیع وحدات القیاس المتریة مقبولة في النظام الدولي للوحدات. 
   </p>
   </div>
