--- a/about-us-html.html
+++ b/about-us-html.html
@@ -11,7 +11,7 @@
   <!-- fonts sheets -->
   <link href="https://fonts.googleapis.com/css2?family=Baloo+Bhaijaan+2:wght@600&display=swap" rel="stylesheet">
 
-  <title> SI | About Us</title>
+  <title> SI | نبذة عنّا</title>
  
 </head>
 <!-- end of head -->
