--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <!-- CSS sheet -->
   <link rel="stylesheet" href="style.css"> 
   <link href="https://fonts.googleapis.com/css2?family=Baloo+Bhaijaan+2:wght@600&display=swap" rel="stylesheet">
+  <link rel="icon" href="logo.png">
 
   <title> SI | الرئيسية </title>
 </head>
