--- a/calc.html
+++ b/calc.html
@@ -10,6 +10,7 @@
   <!-- font sheet -->
   <link href="https://fonts.googleapis.com/css2?family=Baloo+Bhaijaan+2:wght@600&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c:wght@800&display=swap" rel="stylesheet">
+  <link rel="icon" href="logo.png">
 
   <!-- js page -->
   <script src="calc-java.js"></script>
