--- a/SI-html.html
+++ b/SI-html.html
@@ -10,6 +10,7 @@
         <link rel="stylesheet" href="SI-css.css">
         <!-- fonts sheets -->
         <link href="https://fonts.googleapis.com/css2?family=Baloo+Bhaijaan+2:wght@600&display=swap" rel="stylesheet">
+        <link rel="icon" href="logo.png">
 
         <title> SI | النظام الدولي للوحدات </title>
 
