--- a/amount-html.html
+++ b/amount-html.html
@@ -7,7 +7,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="amount-css.css">
   <script src="amount-java.js"></script>
-   <link href="https://fonts.googleapis.com/css2?family=Baloo+Bhaijaan+2:wght@600&display=swap"  rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Baloo+Bhaijaan+2:wght@600&display=swap"  rel="stylesheet">
+  <link rel="icon" href="logo.png">
 
   <title> SI | كمية المادة </title>
 </head>
