--- a/covert-html.html
+++ b/covert-html.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="convert-css.css">
   <link href="https://fonts.googleapis.com/css2?family=Baloo+Bhaijaan+2:wght@600&display=swap"  rel="stylesheet">
+  <link rel="icon" href="logo.png">
 
   <title> SI | التحويلات </title>
 </head>
