--- a/length-html.html
+++ b/length-html.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="length-css.css">
   <script src="length-java.js"></script>
   <link href="https://fonts.googleapis.com/css2?family=Baloo+Bhaijaan+2:wght@600&display=swap"  rel="stylesheet">
+  <link rel="icon" href="logo.png">
 
   <title> SI | الطول </title>
 </head>
