--- a/about-us-html.html
+++ b/about-us-html.html
@@ -8,6 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- css sheet -->
   <link rel="stylesheet" href="about-us-css.css">
+  <link rel="icon" href="logo.png">
   <!-- fonts sheets -->
   <link href="https://fonts.googleapis.com/css2?family=Baloo+Bhaijaan+2:wght@600&display=swap" rel="stylesheet">
 
