--- a/amount-html.html
+++ b/amount-html.html
@@ -36,7 +36,8 @@
   </nav>
 
   <section class="container">
-    <a id="arrow" href="covert-html.html">رجوع ></a>
+    <br />
+    <a id="arrow" href="covert-html.html"> < رجوع </a>
     <div class="content">
       <h1 >تحويل كمية المادة </h1> 
       <p id="about">
